Make layout for "about me" section

--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -1,3 +1,10 @@
+$hl1: #556cff;
+
+$base: #c6c7e1;
+$base-light:#eaecf1;
+
+
+
 body, html{
 	margin: 0;
 	padding: 0;
@@ -6,12 +13,23 @@ body, html{
 }
 
 
+.flex_row{
+	display:flex;
+	flex-direction:row;
+}
+
+.flex_column{
+	display:flex;
+	flex-direction:column;
+}
+
 .header{
 	display:flex;
 	flex-direction: row;
 	background-color: #c6c7e1;
 	height: 50px;
 
+	color: $hl1;
 }
 
 .portfolio_wrapper{
@@ -26,7 +44,7 @@ body, html{
 	color: #5b659b;
 
 	.content{
-		width: 800px;
+		width: 900px;
 		margin: 0 auto;
 	}
 }
@@ -38,11 +56,9 @@ body, html{
 	justify-content: center;
 
 	height: 450px;
-	.content{
-		
-	}
+
 }
 
 .block#aboutme{
-	background-color: #556cff;
+	background-color: white;
 }
