--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -4,12 +4,12 @@ $base: #c6c7e1;
 $base-light:#eaecf1;
 
 
-
 body, html{
 	margin: 0;
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
 	color: #404265;
+	font-size: 12pt;
 }
 
 
