--- a/src/css/master.css
+++ b/src/css/master.css
@@ -71,6 +71,9 @@ body, html {
   border-radius: 10px;
   width: 41%;
   margin: 10px;
+  cursor: pointer;
+  transition-property: width, heigh, position, border;
+  transition-duration: 0.5s;
 }
 .card .title {
   text-transform: uppercase;
@@ -90,6 +93,15 @@ body, html {
 }
 .card .long_summary {
   display: none;
+}
+
+.card:hover {
+  border: 1px solid #d5a958;
+}
+
+.card.active {
+  width: 100%;
+  height: max-content;
 }
 
 /*# sourceMappingURL=master.css.map */
