Convert each card into its own component to track its own toggle state

--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -3,12 +3,13 @@
 	border:1px solid #ffbd012b;
 	border-radius: 10px;
 	width: 41%;
+	height:200px;
 
 	margin: 10px;
 
 	cursor: pointer;
 
-	transition-property: width, heigh, position, border;
+	transition-property: width, height, position, border;
 	transition-duration: 0.5s;
 
 	.title{
@@ -50,5 +51,5 @@
 
 .card.active{
 	width: 100%;
-	height: max-content;
+	height: 250px;
 }
