--- a/src/css/master.css
+++ b/src/css/master.css
@@ -100,9 +100,27 @@ body, html {
   border: 1px solid #d5a958;
 }
 
-.card.active {
-  width: 100%;
-  height: 250px;
+.card.filler {
+  pointer-events: none;
+  opacity: 0;
+}
+
+/*
+.card.active{
+	width: 100%;
+	height: 250px;
+}*/
+.shift-card-move {
+  transition: transform 0.6s;
+}
+
+.shift-card-move-complete-enter, .shift-card-move-complete-leave-to {
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.shift-card-leave-active {
+  position: absolute;
 }
 
 /*# sourceMappingURL=master.css.map */
