--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -1,6 +1,6 @@
 $hl-blue: #99cfb9;
 
-$base: #3b3b36;
+$base: #34332f;
 $base-text: #b59e7a;
 
 $base-light: #eaf2df;
@@ -62,6 +62,7 @@ body, html{
 	.content{
 		width: 900px;
 		margin: 0 auto;
+		padding: 30px 0;
 	}
 }
 
