--- a/src/css/master.css
+++ b/src/css/master.css
@@ -45,12 +45,13 @@ body, html {
 
 .block {
   display: flex;
-  background-color: #3b3b36;
+  background-color: #34332f;
   color: #b59e7a;
 }
 .block .content {
   width: 900px;
   margin: 0 auto;
+  padding: 30px 0;
 }
 
 /* for each sections */
@@ -67,7 +68,7 @@ body, html {
 
 .card {
   padding: 20px;
-  border: 1px solid #ffbd012b;
+  border: 1px solid #ff966e2b;
   border-radius: 10px;
   width: 41%;
   height: 200px;
