--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -1,15 +1,18 @@
+$card-height: 200px;
+$card-width: 41%;
+
 .card{
 	padding: 20px;
 	border:1px solid #ff966e2b;
 	border-radius: 10px;
-	width: 41%;
-	height:200px;
+	width: $card-width;
+	height: $card-height;
 
 	margin: 10px;
 
 	cursor: pointer;
 
-	transition-property: width, height, position, border;
+	transition-property: border;
 	transition-duration: 0.5s;
 
 	.title{
@@ -19,6 +22,9 @@
 	}
 
 	.short_summary{
+		transition-property: opacity;
+		transition-duration: $v-tran-dur;
+		opacity: 1;
 
 		.summary{
 			margin-bottom: 5px;
@@ -48,12 +54,47 @@
 	border:1px solid #d5a958;
 }
 
-.card.filler{
-	pointer-events: none;
-	opacity:0;
-}
-/*
+
+
+
+
 .card.active{
-	width: 100%;
-	height: 250px;
-}*/
+
+	animation-name: open-card;
+	animation-duration: 0.6s;
+	animation-delay: $v-tran-dur;
+	animation-fill-mode: forwards;
+
+	.short_summary{
+		opacity: 0;
+	}
+
+}
+
+@keyframes open-card{
+  0%{
+  	width: $card-width;
+  	height: $card-height;
+  }
+  50% {
+    width: 90%;
+    height: $card-height;
+  }
+  100% {
+  	width: 90%;
+    height: 300px;
+  }
+}
+
+.card.filler{
+	padding: 0;
+	margin: 0;
+	pointer-events: none;
+	overflow:hidden;
+	opacity:0;
+	transition-property: width;
+	transition-duration: 0.3s;
+}
+.card.filler.shrink{
+	width:0%;
+}
