--- a/src/css/master.css
+++ b/src/css/master.css
@@ -74,13 +74,18 @@ body, html {
   height: 200px;
   margin: 10px;
   cursor: pointer;
-  transition-property: width, height, position, border;
+  transition-property: border;
   transition-duration: 0.5s;
 }
 .card .title {
   text-transform: uppercase;
   font-weight: bold;
   margin: 5px 0;
+}
+.card .short_summary {
+  transition-property: opacity;
+  transition-duration: 0.4s;
+  opacity: 1;
 }
 .card .short_summary .summary {
   margin-bottom: 5px;
@@ -101,23 +106,51 @@ body, html {
   border: 1px solid #d5a958;
 }
 
-.card.filler {
-  pointer-events: none;
+.card.active {
+  animation-name: open-card;
+  animation-duration: 0.6s;
+  animation-delay: 0.4s;
+  animation-fill-mode: forwards;
+}
+.card.active .short_summary {
   opacity: 0;
 }
 
-/*
-.card.active{
-	width: 100%;
-	height: 250px;
-}*/
+@keyframes open-card {
+  0% {
+    width: 41%;
+    height: 200px;
+  }
+  50% {
+    width: 90%;
+    height: 200px;
+  }
+  100% {
+    width: 90%;
+    height: 300px;
+  }
+}
+.card.filler {
+  padding: 0;
+  margin: 0;
+  pointer-events: none;
+  overflow: hidden;
+  opacity: 0;
+  transition-property: width;
+  transition-duration: 0.3s;
+}
+
+.card.filler.shrink {
+  width: 0%;
+}
+
 .shift-card-move {
-  transition: transform 0.6s;
+  transition: transform 0.4s;
 }
 
 .shift-card-move-complete-enter, .shift-card-move-complete-leave-to {
   opacity: 0;
-  transform: translateY(30px);
+  /*transform: translateY(30px);*/
 }
 
 .shift-card-leave-active {
