V-transition in the long summary after click

--- a/src/css/_v-transitions.scss
+++ b/src/css/_v-transitions.scss
@@ -14,3 +14,15 @@
   position: absolute;
 }
 
+
+
+.show-long-summary-enter-active, .show-long-summary-leave-active{
+	transition-property: opacity, height;
+	transition-duration:0.4s;
+
+}
+
+.show-long-summary-enter, .show-long-summary-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  	opacity: 0;
+  	height: 0px;
+}
