--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -12,7 +12,7 @@ $card-width: 41%;
 
 	cursor: pointer;
 
-	transition-property: border;
+	transition-property: height, border;
 	transition-duration: 0.5s;
 
 	.title{
@@ -44,10 +44,14 @@ $card-width: 41%;
 			}
 		}
 	}
-	
+
 	.long_summary{
-		display:none;
+		display:block;
+		height: 0px;
 	}
+
+	
+
 }
 
 .card:hover{
@@ -56,45 +60,44 @@ $card-width: 41%;
 
 
 
-
-
 .card.active{
-
 	animation-name: open-card;
-	animation-duration: 0.6s;
+	animation-duration: 0.3s;
 	animation-delay: $v-tran-dur;
-	animation-fill-mode: forwards;
+	animation-fill-mode: both;
 
 	.short_summary{
 		opacity: 0;
 	}
 
+	.long_summary{
+		height: 100%;
+	}
 }
 
 @keyframes open-card{
   0%{
   	width: $card-width;
-  	height: $card-height;
-  }
-  50% {
-    width: 90%;
-    height: $card-height;
   }
   100% {
-  	width: 90%;
-    height: 300px;
+  	width: 89%;
+
   }
 }
 
 .card.filler{
+
 	padding: 0;
 	margin: 0;
 	pointer-events: none;
 	overflow:hidden;
 	opacity:0;
+
+	/* for shrinking */
 	transition-property: width;
 	transition-duration: 0.3s;
 }
 .card.filler.shrink{
 	width:0%;
+	height: 10px;
 }
