--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -6,7 +6,7 @@ $card-width: 41%;
 	border:1px solid #ff966e2b;
 	border-radius: 10px;
 	width: $card-width;
-	height: $card-height;
+	min-height: $card-height;
 
 	margin: 10px;
 
@@ -21,6 +21,20 @@ $card-width: 41%;
 		margin: 5px 0;
 	}
 
+	.tags{
+
+		span{
+			border:1px solid $hl-blue;
+			border-radius: 5px;
+			padding: 3px 6px;
+			margin: 0px 5px 5px 0;
+			color: $hl-blue;
+			font-size: 0.7em;
+
+		}
+	}
+
+
 	.short_summary{
 		transition-property: opacity;
 		transition-duration: $v-tran-dur;
@@ -31,18 +45,7 @@ $card-width: 41%;
 		}
 		
 
-		.tags{
-
-			span{
-				border:1px solid $hl-blue;
-				border-radius: 5px;
-				padding: 3px 6px;
-				margin: 0px 5px 5px 0;
-				color: $hl-blue;
-				font-size: 0.7em;
-
-			}
-		}
+		
 	}
 
 	.long_summary{
