--- a/src/css/_v-transitions.scss
+++ b/src/css/_v-transitions.scss
@@ -16,12 +16,17 @@
 
 
 
-.show-long-summary-enter-active, .show-long-summary-leave-active{
-	transition-property: opacity, height;
+.toggle-long-summary-enter-active, .toggle-long-summary-leave-active{
+	/* for some reason putting this here doesn't work. So I put it into
+	   .long-summary directly */
+	transition-property: opacity;
 	transition-duration:0.3s;
 }
 
-.show-long-summary-enter, .show-long-summary-leave-to /* .fade-leave-active below version 2.1.8 */ {
+.toggle-long-summary-enter, .toggle-long-summary-leave-to /* .fade-leave-active below version 2.1.8 */ {
   	opacity: 0;
-  	height: 0px;
+}
+
+.toggle-long-summary-enter-to{
+	opacity: 1;
 }
