--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -99,3 +99,16 @@ $width-expand-dur: 0.2s;
 	/* this class is applied in fillerEnter() */
 	width:0%;
 }
+
+
+.card.hidden{
+	/* bug?: v-transition 'shift-card' does not happen if the first 
+			 clicked element is the first element in the list under the 
+			 v-transition 'shift-card'. All transition by clicking subsequent
+			 cards also fails. But if the first element clicked is 
+			 NOT the first card, the v-transition renders okay */
+	height: 0px;
+	pointer-events: none;
+	opacity: 0;
+	padding: 0; margin: 0;
+}
