Make card shifting animation smoother using 100% width filler card instead of trying to fit it perfectly

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body, html {
   margin: 0;
   padding: 0;
@@ -97,6 +101,7 @@ body, html {
   font-size: 0.7em;
 }
 .card .short_summary {
+  overflow: hidden;
   transition-property: opacity;
   transition-duration: 0.4s;
   opacity: 1;
@@ -117,13 +122,15 @@ body, html {
   background-color: #ffbb750a;
   animation-name: open-card;
   animation-duration: 0.2s;
-  animation-delay: 0.4s;
+  animation-delay: 0.1s;
   animation-fill-mode: both;
 }
 .card.active .short_summary {
   opacity: 0;
 }
 
+/* Note: because height needs to be calculated, it is done in main.js.
+		 check toggleCard() for details */
 @keyframes open-card {
   0% {
     width: 41%;
@@ -136,16 +143,17 @@ body, html {
   padding: 0;
   margin: 0;
   pointer-events: none;
+  width: 100%;
+  height: 0px;
+  border: 0px solid yellow;
   overflow: hidden;
-  opacity: 0.2;
-  /* for shrinking */
+  /* for shrinking
   transition-property: width;
-  transition-duration: 0.25s;
+  transition-duration: 0.25s; */
 }
 
 .card.filler.shrink {
   /* this class is applied in fillerEnter() */
-  width: 0%;
 }
 
 .card.hidden {
@@ -168,6 +176,11 @@ body, html {
 .shift-card-move-complete-enter, .shift-card-move-complete-leave-to {
   opacity: 0;
   /*transform: translateY(30px);*/
+}
+
+.shift-card-leave-active {
+  /* you need this to animate shifting when cards leave */
+  position: absolute;
 }
 
 .toggle-long-summary-enter-active, .toggle-long-summary-leave-active {
