--- a/src/css/_cards.scss
+++ b/src/css/_cards.scss
@@ -37,6 +37,9 @@ $card-width: 41%;
 
 
 	.short_summary{
+		
+		overflow: hidden;
+
 		transition-property: opacity;
 		transition-duration: $v-tran-dur;
 		opacity: 1;
@@ -44,7 +47,6 @@ $card-width: 41%;
 		.summary{
 			margin-bottom: 5px;
 		}
-	
 	}
 
 	.long_summary{
@@ -61,11 +63,13 @@ $card-width: 41%;
 $width-expand-dur: 0.2s;
 
 .card.active{
+	
+
 	background-color: #ffbb750a;
 
 	animation-name: open-card;
 	animation-duration: $width-expand-dur;
-	animation-delay: $v-tran-dur;
+	animation-delay: 0.1s;
 	animation-fill-mode: both;
 
 	.short_summary{
@@ -73,33 +77,34 @@ $width-expand-dur: 0.2s;
 	}
 }
 
+/* Note: because height needs to be calculated, it is done in main.js.
+		 check toggleCard() for details */
 @keyframes open-card{
   0%{
   	width: $card-width;
   }
   100% {
   	width: 89%;
-
   }
 }
 
 .card.filler{
-
 	padding: 0;
 	margin: 0;
 	pointer-events: none;
+	
+	width:100%;
+	height: 0px;
+	border:0px solid yellow;
 	overflow:hidden;
-	opacity:0.2;
 
-	/* for shrinking */
+	/* for shrinking
 	transition-property: width;
-	transition-duration: 0.25s;
+	transition-duration: 0.25s; */
 }
 .card.filler.shrink{
 	/* this class is applied in fillerEnter() */
-	width:0%;
 }
-
 
 .card.hidden{
 	/* bug?: v-transition 'shift-card' does not happen if the first 
