--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -8,6 +8,11 @@ $base-light-text: #57997e;
 
 $v-tran-dur: 0.4s;
 
+html{
+
+  scroll-behavior: smooth;
+
+}
 body, html{
 	margin: 0;
 	padding: 0;
