Add work experience section and component to render cards for each

--- a/src/css/input.scss
+++ b/src/css/input.scss
@@ -1,5 +1,8 @@
 @import "vars";
 @import "mainLayout";
+@import "workExpLayout";
+
 @import "cards";
+@import "cards_work";
 
 @import "v-transitions";
