--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -1,13 +1,3 @@
-$hl-blue: #99cfb9;
-
-$base: #34332f;
-$base-text: #b59e7a;
-
-$base-light: #eaf2df;
-$base-light-text: #57997e;
-
-$v-tran-dur: 0.4s;
-
 html{
 
   scroll-behavior: smooth;
@@ -17,7 +7,9 @@ body, html{
 	margin: 0;
 	padding: 0;
 	font-family: 'Quicksand', sans-serif;
-	color: #404265;
+
+	background-color: $light_lightBase;
+	color: $light_text1;
 	font-size: 12pt;
 }
 
@@ -66,8 +58,6 @@ body, html{
 
 .block{
 	display:flex;
-	background-color: $base;
-	color: $base-text;
 
 	.content{
 		width: 900px;
