--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -9,5 +9,10 @@ $dark_text1: #b59e7a;
 
 $hl-blue: #99cfb9;
 
+/* Layout variables */
+$content_width: 80vw;
+$content_max_width: 800px;
+
+
 
 $v-tran-dur: 0.4s;
