--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -60,9 +60,16 @@ body, html{
 	display:flex;
 
 	.content{
-		width: 900px;
+		width: $content_width;
+		max-width: $content_max_width;
 		margin: 0 auto;
 		padding: 30px 0;
+	}
+
+	.content.flood{
+		width: 100vw;
+		max-width: 100vw;
+		padding: 0;
 	}
 }
 
