--- a/src/css/master.css
+++ b/src/css/master.css
@@ -1,3 +1,4 @@
+/* Layout variables */
 html {
   scroll-behavior: smooth;
 }
@@ -56,9 +57,15 @@ body, html {
   display: flex;
 }
 .block .content {
-  width: 900px;
+  width: 80vw;
+  max-width: 800px;
   margin: 0 auto;
   padding: 30px 0;
+}
+.block .content.flood {
+  width: 100vw;
+  max-width: 100vw;
+  padding: 0;
 }
 
 /* for each sections */
@@ -169,10 +176,18 @@ body, html {
   margin: 0;
 }
 
+.work_card_wrapper {
+  width: 100%;
+  border: 2px solid red;
+}
+
 .work_card {
   position: relative;
   padding: 20px;
   border: 1px solid #979797;
+  width: 80vw;
+  max-width: 700px;
+  margin: 0 auto;
   transition-property: background-color;
   transition-duration: 0.2s;
 }
