--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,5 +1,5 @@
-$light_lightBase: #eeeeee;
-$light_mediumBase: yellow;
+$light_lightBase: #fafafa;
+$light_mediumBase: #e1e1e1;
 $light_lightKey: cyan;
 $light_mediumKey: blue;
 $light_text1: #464e79;
