--- a/src/css/master.css
+++ b/src/css/master.css
@@ -7,7 +7,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: "Quicksand", sans-serif;
-  background-color: #eeeeee;
+  background-color: #fafafa;
   color: #464e79;
   font-size: 12pt;
 }
@@ -34,6 +34,10 @@ body, html {
   flex-wrap: wrap;
 }
 
+.justify_center {
+  justify-content: center;
+}
+
 .box {
   flex-grow: 1;
 }
@@ -55,6 +59,19 @@ body, html {
 
 .block {
   display: flex;
+  padding: 35px 0;
+}
+.block .section_title_wrapper {
+  font-size: 1.5em;
+}
+.block .section_title_wrapper .line {
+  display: inline-block;
+  flex-grow: 1;
+  align-self: center;
+  border-top: 1px solid black;
+}
+.block .section_title_wrapper .title {
+  padding: 0 20px;
 }
 .block .content {
   width: 80vw;
@@ -78,6 +95,10 @@ body, html {
 
 .block#aboutme {
   background-color: #4c4b47;
+}
+
+.block#workexp {
+  background-color: #e1e1e1;
 }
 
 /* style will be added soon */
@@ -178,7 +199,7 @@ body, html {
 
 .work_card_wrapper {
   width: 100%;
-  border: 2px solid red;
+  background-color: #e1e1e1;
 }
 
 .work_card {
