--- a/src/css/input.scss
+++ b/src/css/input.scss
@@ -2,7 +2,7 @@
 @import "mainLayout";
 @import "workExpLayout";
 
-@import "cards";
+@import "cards_project";
 @import "cards_work";
 
 @import "v-transitions";
