Use webpack to modularize components

--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,4 +1,4 @@
-$light_lightBase: #fafafa;
+$light_lightBase: #eeeeee;
 $light_mediumBase: #e1e1e1;
 $light_lightKey: cyan;
 $light_mediumKey: blue;
