--- a/src/css/master.css
+++ b/src/css/master.css
@@ -7,7 +7,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: "Quicksand", sans-serif;
-  background-color: #fafafa;
+  background-color: #eeeeee;
   color: #464e79;
   font-size: 12pt;
 }
