# This is a combination of 3 commits. # This is the 1st commit message:
Make scrollable modal with lorem ipsum content

# This is the commit message #2:

Make scrollable modal with lorem ipsum content

# This is the commit message #3:

Make scrollable modal with lorem ipsum content

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -10,6 +10,7 @@ body, html {
   background-color: #eeeeee;
   color: #464e79;
   font-size: 12pt;
+  overflow-x: hidden;
 }
 
 .flex_row {
@@ -239,6 +240,24 @@ body, html {
   margin: 0px 5px 5px 0;
   color: #99cfb9;
   font-size: 0.7em;
+}
+
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0000009e;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.modal {
+  align-self: center;
+  background-color: white;
+  margin: 0 auto;
+  width: 60vw;
 }
 
 .shift-card-move {
