--- a/src/css/_mainLayout.scss
+++ b/src/css/_mainLayout.scss
@@ -1,8 +1,7 @@
 html{
-
   scroll-behavior: smooth;
-
 }
+
 body, html{
 	margin: 0;
 	padding: 0;
@@ -11,7 +10,12 @@ body, html{
 	background-color: $light_lightBase;
 	color: $light_text1;
 	font-size: 12pt;
+
+	height: 100%; /* for portfolio_wrapper to have scroll */
+
+	overflow: hidden;
 }
+
 
 
 .flex_row{
@@ -40,7 +44,6 @@ body, html{
 }
 
 
-
 .header{
 	display:flex;
 	position: fixed;
@@ -58,6 +61,9 @@ body, html{
 .portfolio_wrapper{
 	width: 100%;
 	height: 100%;
+
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 
