--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -1,6 +1,6 @@
 .lightbox{
     position: fixed;
-    top: 0;
+    top: $HEADER_HEIGHT;
     left: 0;
     width: 100%; 
     height: 100%;
@@ -18,15 +18,35 @@
 
 .lightbox.active{
     pointer-events: auto;
+    cursor: pointer;
     opacity: 1;
 }
 
 .modal{
+    position: relatve;
+    cursor: default;
+
     align-self: center;
 
     background-color: white;
-    margin: 0 auto;
+    margin: 0px auto 0 auto;
     width: 70vw;
 
-    
+    transition-property: margin;
+    transition-duration: 0.6s;
+
+    .modal_unit{
+        /* container for each unit of content */
+        padding: 18px 35px;
+    }
+
+    .title{
+        background-color: $light_lightBase;
+        font-size: 1.5em;
+    }
+}
+
+
+.lightbox.active .modal{
+    margin-top: 20px;
 }
