--- a/src/css/master.css
+++ b/src/css/master.css
@@ -50,7 +50,7 @@ body, html {
   position: fixed;
   flex-direction: row;
   width: 100%;
-  background-color: #00000030;
+  background-color: #eeeeee;
   height: 50px;
   color: #b89d81;
   z-index: 100;
@@ -100,7 +100,7 @@ body, html {
 }
 
 .block#aboutme {
-  background-color: #4c4b47;
+  background-color: #e1e1e1;
 }
 
 .block#workexp {
@@ -114,7 +114,7 @@ body, html {
   background-color: #e1e1e1;
   width: 41%;
   height: 180px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid #8d8d8d;
   overflow: hidden;
   margin-top: 8px;
   /* $space_around_card - border */
@@ -154,7 +154,7 @@ body, html {
 
 .card_project:hover {
   margin-top: 0px;
-  border-bottom: 10px solid black;
+  border-bottom: 10px solid #8d8d8d;
 }
 
 .card_project.active {
@@ -248,7 +248,7 @@ body, html {
 
 .lightbox {
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -263,14 +263,31 @@ body, html {
 
 .lightbox.active {
   pointer-events: auto;
+  cursor: pointer;
   opacity: 1;
 }
 
 .modal {
+  position: relatve;
+  cursor: default;
   align-self: center;
   background-color: white;
-  margin: 0 auto;
+  margin: 0px auto 0 auto;
   width: 70vw;
+  transition-property: margin;
+  transition-duration: 0.6s;
+}
+.modal .modal_unit {
+  /* container for each unit of content */
+  padding: 18px 35px;
+}
+.modal .title {
+  background-color: #eeeeee;
+  font-size: 1.5em;
+}
+
+.lightbox.active .modal {
+  margin-top: 20px;
 }
 
 .shift-card-move {
