--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -2,7 +2,7 @@ $light_lightBase: #eeeeee;
 $light_mediumBase: #e1e1e1;
 $light_darkBase: #8d8d8d;
 
-$light_lightKey: #5b75d5;
+$light_lightKey: #758bdf;
 $light_mediumKey: blue;
 $light_text1: #464e79;
 
