--- a/src/css/_cards_project.scss
+++ b/src/css/_cards_project.scss
@@ -30,12 +30,13 @@ $space_around_card: 10px;
 
 	.tags{
 		span{
-			border:1px solid $hl-blue;
 			border-radius: 5px;
-			padding: 3px 6px;
+			padding: 5px 8px;
 			margin: 0px 5px 5px 0;
-			color: $hl-blue;
-			font-size: 0.7em;
+			background-color: #226ca917;
+
+			color: #195493;
+			font-size: 0.8em;
 		}
 	}
 
@@ -87,7 +88,7 @@ $width-expand-dur: 0.2s;
 
 	transition-property: color, margin, border, background-color;
 	transition-duration: 0.5s, 0.8s, 0.8s, 0.5s;
-	transition-delay: 0.6s, 0.2s, 0.2s, 0.6s;
+	transition-delay: 0.5s, 0.2s, 0.2s, 0.5s;
 }
 
 /* Note: because height needs to be calculated, it is done in main.js.
