--- a/src/css/master.css
+++ b/src/css/master.css
@@ -131,12 +131,12 @@ body, html {
   margin: 5px 0;
 }
 .card_project .tags span {
-  border: 1px solid #99cfb9;
   border-radius: 5px;
-  padding: 3px 6px;
+  padding: 5px 8px;
   margin: 0px 5px 5px 0;
-  color: #99cfb9;
-  font-size: 0.7em;
+  background-color: #226ca917;
+  color: #195493;
+  font-size: 0.8em;
 }
 .card_project .short_summary {
   overflow: hidden;
@@ -174,7 +174,7 @@ body, html {
      immediately when closed, needed a second class to do this */
   transition-property: color, margin, border, background-color;
   transition-duration: 0.5s, 0.8s, 0.8s, 0.5s;
-  transition-delay: 0.6s, 0.2s, 0.2s, 0.6s;
+  transition-delay: 0.5s, 0.2s, 0.2s, 0.5s;
 }
 
 /* Note: because height needs to be calculated, it is done in main.js.
