Add blue color to the theme

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -108,6 +108,11 @@ body, html {
 }
 
 /* style will be added soon */
+.skill_list {
+  background-color: #4155af;
+  color: #dce2f3;
+}
+
 .card_project {
   position: relative;
   padding: 20px;
