--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -3,8 +3,9 @@ $light_mediumBase: #e1e1e1;
 $light_darkBase: #8d8d8d;
 
 $light_lightKey: #758bdf;
-$light_mediumKey: blue;
+$light_mediumKey: #4155af;
 $light_text1: #464e79;
+$light_text2: #dce2f3;
 
 $dark_lightBase: #34332f;
 $dark_text1: #b59e7a;
