--- a/src/css/input.scss
+++ b/src/css/input.scss
@@ -1,9 +1,11 @@
 @import "vars";
 @import "mainLayout";
 @import "workExpLayout";
+@import "aboutMeLayout";
 
 @import "cards_project";
 @import "cards_work";
+
 
 @import "modal";
 
