Slight adjustment to theme color

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -109,7 +109,7 @@ body, html {
 
 /* style will be added soon */
 .skill_list {
-  background-color: #4155af;
+  background-color: #30354c;
   color: #dce2f3;
 }
 
