--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -3,7 +3,8 @@ $light_mediumBase: #e1e1e1;
 $light_darkBase: #8d8d8d;
 
 $light_lightKey: #758bdf;
-$light_mediumKey: #4155af;
+$light_mediumKey: #6d7fce;
+$light_darkKey: #30354c;
 $light_text1: #464e79;
 $light_text2: #dce2f3;
 
