Content update on 'work experience' section

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -104,7 +104,7 @@ body, html {
 }
 
 .block#workexp {
-  background-color: #e1e1e1;
+  background-color: #d3d3d3;
 }
 
 /* style will be added soon */
