--- a/src/css/master.css
+++ b/src/css/master.css
@@ -224,13 +224,14 @@ body, html {
 
 .work_card_wrapper {
   width: 100%;
-  background-color: #e1e1e1;
+  /* This is set by script */
+  /* background-color: $light_mediumBase; */
+  margin: 50px 0;
 }
 
 .work_card {
   position: relative;
-  padding: 20px;
-  border: 1px solid #979797;
+  padding: 25px 35px;
   width: 80vw;
   max-width: 700px;
   margin: 0 auto;
