--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -14,6 +14,8 @@
     max-width: 700px;
     margin: 0 auto;
 
+    border-left: 5px solid $light_darkKey;
+
 	transition-property: background-color;
 	transition-duration: 0.2s;
 
