--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -4,7 +4,7 @@ $light_darkBase: #8d8d8d;
 
 $light_lightKey: #758bdf;
 $light_mediumKey: #6d7fce;
-$light_darkKey: #30354c;
+$light_darkKey: #3e458b;
 $light_text1: #464e79;
 $light_text2: #dce2f3;
 
