--- a/src/css/master.css
+++ b/src/css/master.css
@@ -231,13 +231,22 @@ body, html {
 
 .work_card {
   position: relative;
-  padding: 25px 35px;
   width: 80vw;
   max-width: 700px;
   margin: 0 auto;
-  border-left: 5px solid #3e458b;
   transition-property: background-color;
   transition-duration: 0.2s;
+}
+.work_card .content_left {
+  /* decorative bar */
+  background-color: #3e458b;
+  flex-shrink: 0;
+  width: 5px;
+}
+.work_card .content_right {
+  /* contains actual content */
+  flex-grow: 1;
+  padding: 25px 35px;
 }
 .work_card .card_head .role {
   flex-grow: 1;
