--- a/src/css/master.css
+++ b/src/css/master.css
@@ -73,12 +73,13 @@ strong {
 }
 .block .section_title_wrapper {
   font-size: 1.5em;
+  margin-top: 50px;
 }
 .block .section_title_wrapper .line {
   display: inline-block;
   flex-grow: 1;
   align-self: center;
-  border-top: 1px solid black;
+  border-top: 1px solid #7271bb4f;
 }
 .block .section_title_wrapper .title {
   padding: 0 20px;
