--- a/src/css/_cards_work.scss
+++ b/src/css/_cards_work.scss
@@ -43,8 +43,13 @@
         }
 
         .year{
-            width:100px;
-            border-left: 1px solid black;
+            width:fit-content;
+            border-left: 1px solid $light_darkBase;
+            padding: 10px 0 10px 20px;
+
+            span{
+                align-self: center;
+            }
         }
     }
 
