--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -1,13 +1,13 @@
 .lightbox{
     position: fixed;
-    top: $HEADER_HEIGHT;
-    left: 0;
+    top: 0; left: 0;
     width: 100%; 
     height: 100%;
     background-color: #0000009e;
 
     overflow-y: scroll;
     overflow-x: hidden;
+    z-index: 101;
 
     pointer-events: none;
     opacity: 0;
@@ -29,7 +29,7 @@
     align-self: center;
 
     background-color: white;
-    margin: -20px auto 0 auto;
+    margin: -10px auto 50px auto;
     width: 70vw;
 
     transition-property: margin;
@@ -38,6 +38,16 @@
     .modal_unit{
         /* container for each unit of content */
         padding: 18px 35px;
+    }  
+
+    .image_header{
+        height: 280px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        img {
+            height: 100%;
+            width: auto;
+        }
     }
 
     .title{
