--- a/src/css/master.css
+++ b/src/css/master.css
@@ -101,7 +101,7 @@ strong {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 450px;
+  height: 100vh;
 }
 
 .block#aboutme {
@@ -283,13 +283,14 @@ strong {
 
 .lightbox {
   position: fixed;
-  top: 50px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #0000009e;
   overflow-y: scroll;
   overflow-x: hidden;
+  z-index: 101;
   pointer-events: none;
   opacity: 0;
   transition-property: opacity;
@@ -307,7 +308,7 @@ strong {
   cursor: default;
   align-self: center;
   background-color: white;
-  margin: -20px auto 0 auto;
+  margin: -10px auto 50px auto;
   width: 70vw;
   transition-property: margin;
   transition-duration: 0.6s;
@@ -315,6 +316,15 @@ strong {
 .modal .modal_unit {
   /* container for each unit of content */
   padding: 18px 35px;
+}
+.modal .image_header {
+  height: 280px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+.modal .image_header img {
+  height: 100%;
+  width: auto;
 }
 .modal .title {
   background-color: #eeeeee;
